--- a/templates/stack.yml
+++ b/templates/stack.yml
@@ -7,3 +7,21 @@
     - tmux
     - vim
     - zsh
+    - osx
+  tasks:
+    - name: ensure osx configuration
+      action: "{{ item }}"
+      with_items:
+        - autohide_dock
+        - bind_caps_to_ctrl
+        - dont_write_to_network
+        - hold_for_key_repeat
+        - initial_key_repeat
+        - key_repeat_speed
+        - new_app_prompt
+        - safari_dev_menu
+        - safari_developer_extras
+        - show_all_extensions
+        - show_finder_status_bar
+        - software_update_frequency
+        - trackpad_right_click
