Add stack-test.yml to be used during testing (doesn't include as many brew cask apps). Add a good default set of apps to stack.yml.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
 
 script:
 - bash install.sh --skip-short-stack
+- cp ~/.short-stack/templates/stack-test.yml ~/.stack.yml
 - short-stack
 - >
   short-stack
